# tes-python-package

./: pyproject.toml  setup.py
other/: main.py
