[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hentestpackage"
authors = [
    {name = "Henrique Mendes", email = "henrique.gmendes@hotmail.com"},
]
description = "Test"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'importlib-metadata; python_version>="3.9"',
]
dynamic = ["version"]